// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Story|How to create a story built as string 1`] = `
<root>
  <test>
    <div>
      simple test
    </div>
  </test>
</root>
`;

exports[`Storyshots Story|How to create a story built from raw import 1`] = `
<root
  data-is="simpletest"
>
  <div>
    simple test (without parameter). Oh, by the way (... well, nothing)
  </div>
</root>
`;

exports[`Storyshots Story|How to create a story built from tags and template 1`] = `
<root>
  <simpletest
    test="with a parameter"
  >
    <div>
      simple test (with a parameter). Oh, by the way (value is mapped to riotValue)
    </div>
  </simpletest>
</root>
`;

exports[`Storyshots Story|How to create a story built from the precompilation 1`] = `
<root
  data-is="anothertest"
>
  <div>
    yet another test, precompiled this time (WARN, only works in lower case, never upper case with precompiled templates)
  </div>
</root>
`;

exports[`Storyshots Story|How to create a story built with tag2 1`] = `
<root
  data-is="test"
>
  <div>
    simple test (with a parameter)
  </div>
</root>
`;

exports[`Storyshots Story|Nest tags Matriochka 1`] = `
<root>
  <matriochka>
    <div>
      <tag1>
        <div>
          Inside tag1:
          <ul>
            <li>
              <tag2>
                <div>
                  Inside tag2:
                  <ul>
                    <li>
                      <tag3>
                        <div>
                          Inside tag3:
                          <ul>
                            <li>
                              <tag4>
                                <div>
                                  Inside tag4:
                                  <ul>
                                    <li>
                                      <tag5>
                                        <div>
                                          Inside tag5:
                                          <ul>
                                            <li>
                                              Content
                                            </li>
                                          </ul>
                                        </div>
                                      </tag5>
                                    </li>
                                  </ul>
                                </div>
                              </tag4>
                            </li>
                          </ul>
                        </div>
                      </tag3>
                    </li>
                  </ul>
                </div>
              </tag2>
            </li>
          </ul>
        </div>
      </tag1>
    </div>
  </matriochka>
</root>
`;

exports[`Storyshots Story|Nest tags Three tags 1`] = `
<root>
  <webpage>
    <pageheader>
      <h1>
        Simple title
      </h1>
    </pageheader>
    <pagebody>
      <div
        style="border-radius: 1em;border-right: solid 1px #cac9c9;border-bottom: solid 1px #cac9c9;box-shadow: 1em 1em 2em #eae9e9; margin: 3em; padding: 3em;min-height: 10em;min-width: 30em"
      >
        Simple Content
      </div>
    </pagebody>
  </webpage>
</root>
`;
